--- a/Happiness/en.lproj/MainStoryboard.storyboard
+++ b/Happiness/en.lproj/MainStoryboard.storyboard
@@ -11,16 +11,38 @@
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSd-7c-pCa" customClass="SCSCircleView">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GSd-7c-pCa" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="5Ku-bG-Ig5"/>
+                            <constraint firstAttribute="bottom" secondItem="GSd-7c-pCa" secondAttribute="bottom" constant="76" id="L7E-BH-pna"/>
+                            <constraint firstItem="GSd-7c-pCa" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="50" id="W7i-b0-l3x"/>
+                            <constraint firstItem="GSd-7c-pCa" firstAttribute="top" secondItem="3" secondAttribute="top" constant="164" id="bg9-5J-62e"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SCSCircleView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SCSCircleView.h"/>
+        </class>
+        <class className="SCSHappinessViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SCSHappinessViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
