--- a/Happiness/en.lproj/MainStoryboard.storyboard
+++ b/Happiness/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C3006" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3006" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
         <!--Happiness View Controller-->
@@ -12,8 +12,33 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSd-7c-pCa" customClass="SCSCircleView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSd-7c-pCa" userLabel="Face" customClass="SCSCircleView">
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wqn-yY-kNl" userLabel="Left Eye" customClass="SCSCircleView">
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9oo-gL-9BS" userLabel="Right Eye" customClass="SCSCircleView">
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fWQ-Zm-0fZ" userLabel="Smile View" customClass="SCSSmileView">
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="9oo-gL-9BS" firstAttribute="bottom" secondItem="Wqn-yY-kNl" secondAttribute="bottom" type="default" id="3RT-CZ-jt6"/>
+                                    <constraint firstItem="9oo-gL-9BS" firstAttribute="leading" secondItem="GSd-7c-pCa" secondAttribute="leading" constant="150" id="KLC-ly-CKB"/>
+                                    <constraint firstAttribute="bottom" secondItem="fWQ-Zm-0fZ" secondAttribute="bottom" constant="40" id="O1e-0R-ZKs"/>
+                                    <constraint firstItem="Wqn-yY-kNl" firstAttribute="leading" secondItem="GSd-7c-pCa" secondAttribute="leading" constant="40" id="SZ6-iE-cwJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="Wqn-yY-kNl" secondAttribute="bottom" constant="145" id="XT1-da-APQ"/>
+                                    <constraint firstItem="fWQ-Zm-0fZ" firstAttribute="centerX" secondItem="GSd-7c-pCa" secondAttribute="centerX" type="default" id="fNx-N6-dwX"/>
+                                    <constraint firstItem="9oo-gL-9BS" firstAttribute="top" secondItem="Wqn-yY-kNl" secondAttribute="top" type="default" id="gUN-Y3-cyX"/>
+                                    <constraint firstItem="Wqn-yY-kNl" firstAttribute="top" secondItem="GSd-7c-pCa" secondAttribute="top" constant="45" id="j02-B3-n4H"/>
+                                    <constraint firstItem="fWQ-Zm-0fZ" firstAttribute="leading" secondItem="Wqn-yY-kNl" secondAttribute="leading" type="default" id="jgP-vm-HAR"/>
+                                    <constraint firstItem="9oo-gL-9BS" firstAttribute="trailing" secondItem="fWQ-Zm-0fZ" secondAttribute="trailing" type="default" id="ow9-pZ-2LW"/>
+                                    <constraint firstItem="fWQ-Zm-0fZ" firstAttribute="top" secondItem="GSd-7c-pCa" secondAttribute="top" constant="100" id="uFR-bi-XZX"/>
+                                    <constraint firstAttribute="trailing" secondItem="Wqn-yY-kNl" secondAttribute="trailing" constant="150" id="w2M-tm-yvy"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -27,6 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="221" y="78"/>
         </scene>
     </scenes>
     <classes>
@@ -38,6 +64,9 @@
         </class>
         <class className="SCSHappinessViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SCSHappinessViewController.h"/>
+        </class>
+        <class className="SCSSmileView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SCSSmileView.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
