--- a/Happiness/en.lproj/MainStoryboard.storyboard
+++ b/Happiness/en.lproj/MainStoryboard.storyboard
@@ -12,47 +12,61 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSd-7c-pCa" userLabel="Face" customClass="SCSCircleView">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.88" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4LF-SQ-MAb">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="114" id="8hf-jM-cYk"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="adjustScale:" destination="2" eventType="valueChanged" id="ike-qL-mch"/>
+                                </connections>
+                            </slider>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ueZ-nc-GLN" customClass="SCSCircleView">
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wqn-yY-kNl" userLabel="Left Eye" customClass="SCSCircleView">
+                                    <view opaque="NO" contentMode="scaleToFill" restorationIdentifier="" translatesAutoresizingMaskIntoConstraints="NO" id="lyi-s6-Fy6" userLabel="Right Eye" customClass="SCSCircleView">
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9oo-gL-9BS" userLabel="Right Eye" customClass="SCSCircleView">
+                                    <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ijj-ss-cdc" userLabel="Left Eye" customClass="SCSCircleView">
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fWQ-Zm-0fZ" userLabel="Smile View" customClass="SCSSmileView">
+                                    <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Qp-fc-8EA" customClass="SCSSmileView">
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="9oo-gL-9BS" firstAttribute="bottom" secondItem="Wqn-yY-kNl" secondAttribute="bottom" type="default" id="3RT-CZ-jt6"/>
-                                    <constraint firstItem="9oo-gL-9BS" firstAttribute="leading" secondItem="GSd-7c-pCa" secondAttribute="leading" constant="150" id="KLC-ly-CKB"/>
-                                    <constraint firstAttribute="bottom" secondItem="fWQ-Zm-0fZ" secondAttribute="bottom" constant="40" id="O1e-0R-ZKs"/>
-                                    <constraint firstItem="Wqn-yY-kNl" firstAttribute="leading" secondItem="GSd-7c-pCa" secondAttribute="leading" constant="40" id="SZ6-iE-cwJ"/>
-                                    <constraint firstAttribute="bottom" secondItem="Wqn-yY-kNl" secondAttribute="bottom" constant="145" id="XT1-da-APQ"/>
-                                    <constraint firstItem="fWQ-Zm-0fZ" firstAttribute="centerX" secondItem="GSd-7c-pCa" secondAttribute="centerX" type="default" id="fNx-N6-dwX"/>
-                                    <constraint firstItem="9oo-gL-9BS" firstAttribute="top" secondItem="Wqn-yY-kNl" secondAttribute="top" type="default" id="gUN-Y3-cyX"/>
-                                    <constraint firstItem="Wqn-yY-kNl" firstAttribute="top" secondItem="GSd-7c-pCa" secondAttribute="top" constant="45" id="j02-B3-n4H"/>
-                                    <constraint firstItem="fWQ-Zm-0fZ" firstAttribute="leading" secondItem="Wqn-yY-kNl" secondAttribute="leading" type="default" id="jgP-vm-HAR"/>
-                                    <constraint firstItem="9oo-gL-9BS" firstAttribute="trailing" secondItem="fWQ-Zm-0fZ" secondAttribute="trailing" type="default" id="ow9-pZ-2LW"/>
-                                    <constraint firstItem="fWQ-Zm-0fZ" firstAttribute="top" secondItem="GSd-7c-pCa" secondAttribute="top" constant="100" id="uFR-bi-XZX"/>
-                                    <constraint firstAttribute="trailing" secondItem="Wqn-yY-kNl" secondAttribute="trailing" constant="150" id="w2M-tm-yvy"/>
+                                    <constraint firstItem="2Qp-fc-8EA" firstAttribute="top" secondItem="ueZ-nc-GLN" secondAttribute="top" constant="110" id="3dX-Z3-RHs"/>
+                                    <constraint firstItem="2Qp-fc-8EA" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ueZ-nc-GLN" secondAttribute="top" constant="110" type="user" id="4Zi-rM-URF"/>
+                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="leading" secondItem="2Qp-fc-8EA" secondAttribute="leading" type="default" id="9hg-Ke-7Sz"/>
+                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="top" secondItem="lyi-s6-Fy6" secondAttribute="top" type="default" id="DZi-uP-S5v"/>
+                                    <constraint firstItem="2Qp-fc-8EA" firstAttribute="trailing" secondItem="lyi-s6-Fy6" secondAttribute="trailing" type="default" id="FB9-0P-2aC"/>
+                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="centerY" secondItem="lyi-s6-Fy6" secondAttribute="centerY" type="user" id="HFW-0e-qns"/>
+                                    <constraint firstAttribute="bottom" secondItem="2Qp-fc-8EA" secondAttribute="bottom" constant="61" id="Pcr-42-igk"/>
+                                    <constraint firstItem="2Qp-fc-8EA" firstAttribute="centerX" secondItem="ueZ-nc-GLN" secondAttribute="centerX" type="default" id="QdK-Qf-Q5Z"/>
+                                    <constraint firstItem="lyi-s6-Fy6" firstAttribute="leading" secondItem="ueZ-nc-GLN" secondAttribute="leading" constant="125" id="SLY-dt-BSY"/>
+                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="leading" secondItem="ueZ-nc-GLN" secondAttribute="leading" constant="56" id="Z8K-dI-bgO"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ijj-ss-cdc" secondAttribute="bottom" constant="182" id="eQw-GW-aIg"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ijj-ss-cdc" secondAttribute="trailing" constant="126" id="pJT-5f-qhB"/>
+                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="top" secondItem="ueZ-nc-GLN" secondAttribute="top" constant="41" id="zTC-KK-C9e"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="GSd-7c-pCa" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="5Ku-bG-Ig5"/>
-                            <constraint firstAttribute="bottom" secondItem="GSd-7c-pCa" secondAttribute="bottom" constant="76" id="L7E-BH-pna"/>
-                            <constraint firstItem="GSd-7c-pCa" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="50" id="W7i-b0-l3x"/>
-                            <constraint firstItem="GSd-7c-pCa" firstAttribute="top" secondItem="3" secondAttribute="top" constant="164" id="bg9-5J-62e"/>
+                            <constraint firstAttribute="bottom" secondItem="4LF-SQ-MAb" secondAttribute="bottom" constant="31" id="27Z-mN-SNe"/>
+                            <constraint firstAttribute="bottom" secondItem="ueZ-nc-GLN" secondAttribute="bottom" constant="111" id="HFQ-nO-O9Y"/>
+                            <constraint firstItem="ueZ-nc-GLN" firstAttribute="top" secondItem="3" secondAttribute="top" constant="92" id="Hyn-sk-ZHf"/>
+                            <constraint firstAttribute="trailing" secondItem="ueZ-nc-GLN" secondAttribute="trailing" constant="32" id="OgE-FT-bP2"/>
+                            <constraint firstItem="4LF-SQ-MAb" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="hca-Wx-HQd"/>
+                            <constraint firstItem="ueZ-nc-GLN" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="67" id="nHH-yR-oMC"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="circleView" destination="ueZ-nc-GLN" id="Fcl-L1-XDN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="221" y="78"/>
+            <point key="canvasLocation" x="-136" y="-40"/>
         </scene>
     </scenes>
     <classes>
@@ -64,6 +78,10 @@
         </class>
         <class className="SCSHappinessViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SCSHappinessViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="adjustScale:" candidateClass="UISlider"/>
+                <relationship kind="outlet" name="circleView" candidateClass="SCSCircleView"/>
+            </relationships>
         </class>
         <class className="SCSSmileView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SCSSmileView.h"/>
