--- a/Happiness/en.lproj/MainStoryboard.storyboard
+++ b/Happiness/en.lproj/MainStoryboard.storyboard
@@ -12,59 +12,67 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.88" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4LF-SQ-MAb">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="114" id="8hf-jM-cYk"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="adjustScale:" destination="2" eventType="valueChanged" id="ike-qL-mch"/>
-                                </connections>
-                            </slider>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ueZ-nc-GLN" customClass="SCSCircleView">
+                            <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="tFw-lJ-27P" customClass="SCSCircleView">
                                 <subviews>
-                                    <view opaque="NO" contentMode="scaleToFill" restorationIdentifier="" translatesAutoresizingMaskIntoConstraints="NO" id="lyi-s6-Fy6" userLabel="Right Eye" customClass="SCSCircleView">
+                                    <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="QZt-15-MHT" userLabel="Left Eye" customClass="SCSCircleView">
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     </view>
-                                    <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ijj-ss-cdc" userLabel="Left Eye" customClass="SCSCircleView">
+                                    <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="iIy-oT-gdu" userLabel="Right Eye" customClass="SCSCircleView">
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     </view>
-                                    <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Qp-fc-8EA" customClass="SCSSmileView">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BMd-IG-YP2" customClass="SCSSmileView">
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="fsJ-73-qvB" appends="YES" id="xVu-yt-b9m"/>
+                                        </connections>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstItem="2Qp-fc-8EA" firstAttribute="top" secondItem="ueZ-nc-GLN" secondAttribute="top" constant="110" id="3dX-Z3-RHs"/>
-                                    <constraint firstItem="2Qp-fc-8EA" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ueZ-nc-GLN" secondAttribute="top" constant="110" type="user" id="4Zi-rM-URF"/>
-                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="leading" secondItem="2Qp-fc-8EA" secondAttribute="leading" type="default" id="9hg-Ke-7Sz"/>
-                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="top" secondItem="lyi-s6-Fy6" secondAttribute="top" type="default" id="DZi-uP-S5v"/>
-                                    <constraint firstItem="2Qp-fc-8EA" firstAttribute="trailing" secondItem="lyi-s6-Fy6" secondAttribute="trailing" type="default" id="FB9-0P-2aC"/>
-                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="centerY" secondItem="lyi-s6-Fy6" secondAttribute="centerY" type="user" id="HFW-0e-qns"/>
-                                    <constraint firstAttribute="bottom" secondItem="2Qp-fc-8EA" secondAttribute="bottom" constant="61" id="Pcr-42-igk"/>
-                                    <constraint firstItem="2Qp-fc-8EA" firstAttribute="centerX" secondItem="ueZ-nc-GLN" secondAttribute="centerX" type="default" id="QdK-Qf-Q5Z"/>
-                                    <constraint firstItem="lyi-s6-Fy6" firstAttribute="leading" secondItem="ueZ-nc-GLN" secondAttribute="leading" constant="125" id="SLY-dt-BSY"/>
-                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="leading" secondItem="ueZ-nc-GLN" secondAttribute="leading" constant="56" id="Z8K-dI-bgO"/>
-                                    <constraint firstAttribute="bottom" secondItem="Ijj-ss-cdc" secondAttribute="bottom" constant="182" id="eQw-GW-aIg"/>
-                                    <constraint firstAttribute="trailing" secondItem="Ijj-ss-cdc" secondAttribute="trailing" constant="126" id="pJT-5f-qhB"/>
-                                    <constraint firstItem="Ijj-ss-cdc" firstAttribute="top" secondItem="ueZ-nc-GLN" secondAttribute="top" constant="41" id="zTC-KK-C9e"/>
+                                    <constraint firstItem="BMd-IG-YP2" firstAttribute="top" secondItem="iIy-oT-gdu" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="6Nj-Po-VfS"/>
+                                    <constraint firstItem="BMd-IG-YP2" firstAttribute="centerX" secondItem="tFw-lJ-27P" secondAttribute="centerX" type="default" id="F7d-wx-vex"/>
+                                    <constraint firstItem="iIy-oT-gdu" firstAttribute="leading" secondItem="tFw-lJ-27P" secondAttribute="leading" constant="140" id="FPE-Qr-3BD"/>
+                                    <constraint firstAttribute="trailing" secondItem="iIy-oT-gdu" secondAttribute="trailing" constant="50" id="GMM-vy-Kko"/>
+                                    <constraint firstItem="BMd-IG-YP2" firstAttribute="top" secondItem="tFw-lJ-27P" secondAttribute="top" constant="98" id="T1S-eD-I8P"/>
+                                    <constraint firstItem="QZt-15-MHT" firstAttribute="top" secondItem="tFw-lJ-27P" secondAttribute="top" constant="60" id="Wwu-sT-IPe"/>
+                                    <constraint firstItem="BMd-IG-YP2" firstAttribute="top" secondItem="QZt-15-MHT" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Ycd-QZ-9re"/>
+                                    <constraint firstAttribute="bottom" secondItem="BMd-IG-YP2" secondAttribute="bottom" constant="42" id="bJQ-2R-hxd"/>
+                                    <constraint firstItem="QZt-15-MHT" firstAttribute="leading" secondItem="tFw-lJ-27P" secondAttribute="leading" constant="50" id="d67-xI-aTa"/>
+                                    <constraint firstItem="QZt-15-MHT" firstAttribute="top" secondItem="iIy-oT-gdu" secondAttribute="top" type="default" id="hpL-ky-ZFE"/>
+                                    <constraint firstAttribute="trailing" secondItem="QZt-15-MHT" secondAttribute="trailing" constant="140" id="hwv-Um-a3k"/>
+                                    <constraint firstItem="BMd-IG-YP2" firstAttribute="leading" secondItem="tFw-lJ-27P" secondAttribute="leading" constant="40" id="kan-52-Tog"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="bRq-T1-YMl" appends="YES" id="POU-CH-s1f"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="4LF-SQ-MAb" secondAttribute="bottom" constant="31" id="27Z-mN-SNe"/>
-                            <constraint firstAttribute="bottom" secondItem="ueZ-nc-GLN" secondAttribute="bottom" constant="111" id="HFQ-nO-O9Y"/>
-                            <constraint firstItem="ueZ-nc-GLN" firstAttribute="top" secondItem="3" secondAttribute="top" constant="92" id="Hyn-sk-ZHf"/>
-                            <constraint firstAttribute="trailing" secondItem="ueZ-nc-GLN" secondAttribute="trailing" constant="32" id="OgE-FT-bP2"/>
-                            <constraint firstItem="4LF-SQ-MAb" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="hca-Wx-HQd"/>
-                            <constraint firstItem="ueZ-nc-GLN" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="67" id="nHH-yR-oMC"/>
+                            <constraint firstItem="tFw-lJ-27P" firstAttribute="top" secondItem="3" secondAttribute="top" constant="120" id="95k-Q8-7l3"/>
+                            <constraint firstItem="tFw-lJ-27P" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="MJ2-s4-3rN"/>
+                            <constraint firstItem="tFw-lJ-27P" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" type="default" id="ZeP-IC-hlV"/>
+                            <constraint firstItem="tFw-lJ-27P" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="50" id="eyJ-hJ-t4J"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="circleView" destination="ueZ-nc-GLN" id="Fcl-L1-XDN"/>
+                        <outlet property="faceView" destination="tFw-lJ-27P" id="Agp-n1-bB5"/>
+                        <outlet property="smileView" destination="BMd-IG-YP2" id="jx2-gz-b8x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="bRq-T1-YMl">
+                    <connections>
+                        <action selector="adjustScale:" destination="2" id="12R-9K-AGM"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="fsJ-73-qvB">
+                    <connections>
+                        <action selector="adjustSmile:" destination="2" id="XwU-C7-yGo"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-136" y="-40"/>
         </scene>
@@ -79,8 +87,11 @@
         <class className="SCSHappinessViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SCSHappinessViewController.h"/>
             <relationships>
-                <relationship kind="action" name="adjustScale:" candidateClass="UISlider"/>
-                <relationship kind="outlet" name="circleView" candidateClass="SCSCircleView"/>
+                <relationship kind="action" name="adjustScale:" candidateClass="UIPinchGestureRecognizer"/>
+                <relationship kind="action" name="adjustSmile:" candidateClass="UIPanGestureRecognizer"/>
+                <relationship kind="outlet" name="faceView" candidateClass="SCSCircleView"/>
+                <relationship kind="outlet" name="happinessIndex" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="smileView" candidateClass="SCSSmileView"/>
             </relationships>
         </class>
         <class className="SCSSmileView" superclassName="UIView">
